# mosaic

./: .buildinfo  .dockerignore  .gitignore  .jvmopts  .scalafmt.conf  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  codecov.yml  genindex.html  index.html  objects.inv  pom.xml  pyproject.toml  scalastyle-config.xml  search.html  searchindex.js  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: build.yml  build_main.yml  build_python.yml  build_r.yml  build_scala.yml  codeql-analysis.yml  docs.yml  publish-maven.yml  publish-to-test-pypi.yml  pypi-release.yml  python.yml  release.yml  scala.yml
R/: .Rhistory  .gitignore  README.html  README.md  build_r_package.R  generate_R_bindings.R  generate_docs.R  install_deps.R  run_local_spark_with_mosaic.R
R/SparkR/: DESCRIPTION.TEMPLATE  build-r-package-manual.R  build-r-package.R  build-sparkr-mosaic.sh  column.R  functions.R  generate_sparkr_functions.R  generate_sparkr_functions.Rout  incomplete_test.R  run_test.sh  spark-submit-test.sh  test_spark_r.sh  tests.R
R/sparkR-mosaic/: CONTRIBUTING.md  README.md  build_r_package.R  enableGDAL.R  enableMosaic.R  generate_sparkr_functions.R  tests.R
R/sparklyr-mosaic/: enableGDAL.R  enableMosaic.R  generate_sparklyr_mosaic_functions.R  mosaic_extension.R  sparkFunctions.R  spark_functions.R  sparklyr-functions.R  sparklyr-mosaic-tests.R  testing_sparklyr_mosaic.R  tests.R
_sources/: index.rst.txt
_sources/api/: api.rst.txt  geometry-accessors.rst.txt  geometry-constructors.rst.txt  raster-format-readers.rst.txt  raster-functions.rst.txt  spatial-aggregations.rst.txt  spatial-functions.rst.txt  spatial-indexing.rst.txt  spatial-predicates.rst.txt
_sources/models/: spatial-knn.rst.txt
_sources/usage/: grid-indexes-bng.rst.txt  grid-indexes.ipynb.txt  grid-indexes.rst.txt  install-gdal.rst.txt  installation.rst.txt  quickstart.ipynb.txt
_static/: documentation_options.js
_static/css/: custom.css
api/: api.html  geometry-accessors.html  geometry-constructors.html  raster-format-readers.html  raster-functions.html  rasterio-gdal-udfs.html  rasterio-udfs.html  spatial-aggregations.html  spatial-functions.html  spatial-indexing.html  spatial-predicates.html  vector-format-readers.html
build_ymls/: python_build.yml  r_build.yml  scala_build.yml  upload_artifacts_build.yml
docker/: gdal-dependencies  python-unittest  scala-single-test
docker/.run/: docker_scala-single-test.run.xml
docs/: DataModel.md  docs-requirements.txt  mosaic-docs.sh
docs/code-example-notebooks/: accessors.scala  aggregators.scala  constructors.scala  functions.scala  kepler.py  predicates.scala  spatial-indexes.py
docs/python/: Makefile  requirements.txt
docs/source/: conf.py  index.rst  reload.py
examples/netcdf/: netcdf_helpers.py.ipynb
examples/shapefile/: GeoPandas Shapefile UDF Example.ipynb  download_census_shapefiles.py.ipynb
examples/ship2ship/: 01. Data Prep.ipynb  02. Data Ingestion.ipynb  03.a Overlap Detection.ipynb  03.b Advanced Overlap Detection.ipynb  README.md
geotools-plugin/: README.md  pom.xml
literature/: presentations.html  videos.html
models/: models.html  spatial-knn.html
modules/python/gdal/: README.md  setup.cfg
modules/python/gdal_package/: LICENSE  LICENSE.TXT  README.md  setup.cfg  setup.py
modules/python/gdal_package/databricks-mosaic-gdal/resources/scripts/: mosaic-gdal-3.4.3-filetree-init.sh
mosaic-core/: pom.xml
mosaic-index/: pom.xml
mosaic-raster/: pom.xml
mosaic-vector/: pom.xml
notebooks/data/: DownloadLondonPostcodeZones.py  DownloadNYCTaxiZones.py  DownloadOpenStreetMaps.py  DownloadUPRNsData.py  London_Postcode_Zones.geojson
notebooks/examples/: ExamplePipeline.py  MosaicAndSedona.py  README.md  StarterNotebook.scala
notebooks/setup/: EnableMosaic.scala  GeneratorsHotfix.scala  PythonBindings.py
python/: MANIFEST.in  README.md  _MANIFEST.in  generate_python_bindings.py  setup.cfg  setup.py
python/mosaic/: __init__.py  attach.py  core.py  functions.py  library_handler.py  mosaic.py  mosaic_context.py  patch.py
python/mosaic/api/: __init__.py  accessors.py  aggregators.py  constructors.py  enable.py  functions.py  fuse.py  gdal.py  predicates.py  raster.py  test.py
python/mosaic/api/analyzer/: __init__.py  analyzer.py
python/mosaic/api/joins/: joins.py
python/mosaic/config/: config.py
python/mosaic/core/: __init__.py  library_handler.py  mosaic_context.py  mosaic_frame.py
python/mosaic/models/: __init__.py  approximate_spatial_knn.py
python/mosaic/models/analyzer/: analyzer.py
python/mosaic/models/knn/: __init__.py  approximate_spatial_knn.py  spatial_knn.py
python/mosaic/readers/: __init__.py  mosaic_data_frame_reader.py  readers.py
python/mosaic/resources/: __init__.py
python/mosaic/utils/: display_handler.py  kepler_config.py  kepler_magic.py  notebook_utils.py  scala_utils.py  types.py
python/test/: context.py  test_analyzer.py  test_checkpoint.py  test_display_handler.py  test_functions.py  test_fuse_install.py  test_gdal_install.py  test_install_gdal.py  test_library_handler.py  test_mosaic.py  test_mosaic_frame.py  test_raster.py  test_raster_functions.py  test_vector_functions.py  utils.py
python/test/data/: NYC_Taxi_Zones.geojson
python/test/utils/: __init__.py  mosaic_test_case.py  mosaic_test_case_with_gdal.py  setup_fuse.py  setup_gdal.py  spark_test_case.py
scripts/: mosaic-docker.sh  mosaic-gdal-init.sh  tag_version.py  update_version.py
scripts/0.4.2/: mosaic-gdal-init.sh
scripts/dev/: build-wheel.sh
scripts/docker/: README.md  docker_init.sh  ls-tree.sh  mosaic-docker-java-tool-options.sh  mosaic-docker.sh  python-local-build.sh
scripts/m2/: mvn_init.sh  (+1 more)
usage/: automatic-sql-registration.html  grid-indexes-bng.html  grid-indexes.html  grid-indexes.ipynb  install-gdal.html  installation.html  join-optimizations.html  kepler.html  kepler.ipynb  quickstart.html  quickstart.ipynb  raster-checkpointing.html  usage.html
v0.3.x/: .buildinfo  genindex.html  index.html  objects.inv  searchindex.js
(+1607 files in other folders)
