[project]
name = "databricks-spatial"
version = "0.0.1"
authors = [
  { name="Michael Johns", email="mjohns@databricks.com" },
]
description = "Databricks Labs Spatial-Utils"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy <2.0,>=1.23",
    "ipython <8.16,>=7.4.2",
    "h3 <4.0,>=3.7",
    "geopandas <0.14.4,>=0.14"
]

[project.optional-dependencies]
viz = ["keplergl == 0.3.2"]
raster = ["rasterio <1.4,>=1.3.11"]
all = ["databricks-spatial[viz,raster]"]

[build-system]
requires = [
    "keplergl == 0.3.2",
    "rasterio <1.4,>=1.3.11",
    "pyspark <4.0,>=3.5",
    "setuptools >= 61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/databrickslabs/mosaic"
Issues = "https://github.com/databrickslabs/mosaic/issues"
