[project]
name = "databricks-spatial"
version = "0.0.1"
authors = [
  { name="Michael Johns", email="mjohns@databricks.com" },
]
description = "Databricks Labs Spatial-Utils"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy <2.0,>=1.23",
    "ipython <8.16,>=7.4.2",
    "h3 <4.0,>=3.7",
    "pyogrio~=0.10.0",
    "geopandas <0.14.4,>=0.14",
    "geopy ~=2.4.1"
]

[project.optional-dependencies]
viz = ["keplergl == 0.3.2"]
raster = [
    "rioxarray==0.17.0",
    "rasterio <1.4,>=1.3.11",
    "xarray[io]==2024.03.0",
]
route = [
    "osmnx <2.0,>=1.9.4"
]
all = ["databricks-spatial[viz,raster,route]"]

[build-system]
requires = [
    "keplergl == 0.3.2",
    "osmnx <2.0,>=1.9.4",
    "pyspark <4.0,>=3.5",
    "rasterio <1.4,>=1.3.11",
    "rioxarray==0.17.0",
    "setuptools >= 61.0",
    "wheel",
    "xarray[io]==2024.03.0",
]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/databrickslabs/mosaic"
Issues = "https://github.com/databrickslabs/mosaic/issues"
