[metadata]
name = databricks-mosaic
author = Databricks
version = attr: mosaic.__version__
description = Mosaic: geospatial analytics in python, on Spark
url = https://github.com/databrickslabs/mosaic
long_description = file: README.md
long_description_content_type = text/markdown
license = Databricks License
classifiers =
    License :: Other/Proprietary License
    Topic :: Scientific/Engineering :: GIS
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = <3.11,>=3.10
install_requires =
    geopandas<0.14.4,>=0.14
    h3<4.0,>=3.7
    ipython<8.11,>=7.4.2
    keplergl==0.3.2

[options.package_data]
mosaic =
    lib/*.jar
    resources/*.png

[options.extras_require]
dev =
    isort
    black
    build

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
known_first_party=mosaic
default_section=THIRDPARTY

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 20
select = B,C,E,F,W,T4
exclude = .git,__pycache__,docs/conf.py,dist

[mypy]
files=mosaic
ignore_missing_imports=true
