[metadata]
name = databricks-mosaic-gdal
author = Databricks
version = 3.4.3
description = GDAL install with Java Bindings for Databricks Runtime 11+
url = https://github.com/databrickslabs/mosaic/modules/python/gdal
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: GIS
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: C
    Programming Language :: C++
    Programming Language :: Java

[options]
packages = find:
python_requires = >=3.7.0

[options.package_data]
gdal =
    resources/*.tar.gz

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
known_first_party=mosaic
default_section=THIRDPARTY

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 20
select = B,C,E,F,W,T4
exclude = .git,__pycache__,docs/conf.py,dist

[mypy]
files=gdal
ignore_missing_imports=true