[metadata]
name = databricks-mosaic-gdal
author = Databricks
version = 3.4.3
description = GDAL install with Java Bindings for Databricks Runtime 11+
url = https://github.com/databrickslabs/mosaic/modules/python/gdal
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: GIS
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: C
    Programming Language :: C++
    Programming Language :: Java

[options]
packages = find:
python_requires = >=3.7.0

[options.package_data]
# If any package or subpackage contains specified files, include them:
* = resources/*.tar.gz, resources/scripts/*.sh
